gmusicprocurator/static/scss/main.scss
footer {
  background: #fff;
  bottom: 0;
  position: fixed;
  width: 100%;

  button.pure-button {
    border-radius: 0;
  }
}

#player {
  text-align: center;
}

#copyright {
  font-size: smaller;
}

#playlist {
  .listing {
    font-size: smaller;

    tbody tr {
      height: 60px;
    }

    td.albumart {
      padding: 0;
      vertical-align: middle;

      span {
        $aa_size: 32px;
        background-size: contain;
        background-repeat: no-repeat;
        display: inline-block;
        height: $aa_size;
        line-height: $aa_size;
        text-align: center;
        width: $aa_size;
      }

      span:hover {
        background-color: #E6E6E6;
        cursor: pointer;
      }
    }
  }
}

